change references to Abu Dhabi to UAE

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -208,7 +208,7 @@ en:
   tool: TOOL
   help: HELP
   about: ABOUT
-  developed_by: "The Abu Dhabi Blue Carbon Mapping Toolkit was developed by"
+  developed_by: "The UAE Blue Carbon Mapping Toolkit was developed by"
   sign_in: "SIGN IN"
   contact: "CONTACT"
   using_the_tool: "USING THE TOOL"
